--- a/public/viewer.html
+++ b/public/viewer.html
@@ -10,73 +10,87 @@
     <p id="status">Status: connecting...</p>
     <video id="remoteVideo" autoplay playsinline controls style="width:100%;max-width:640px"></video>
 
-    <script src="/socket.io/socket.io.js"></script>
     <script>
-        const statusEl = document.getElementById('status');
-        const videoElement = document.getElementById('remoteVideo');
-        const socket = io();
+        // CONFIG: set SERVER_URL on the page before this script if you host pages on Vercel
+        // Example (in Vercel-hosted page): <script>window.SERVER_URL = 'https://progetto-video-streaming.onrender.com'</script>
+        const SIGNALING_SERVER = window.SERVER_URL || location.origin;
 
-        let pc = null;
-        let remoteStream = null;
+        // dynamically load socket.io client from the signaling server
+        (function loadSocketIo(cb) {
+            const s = document.createElement('script');
+            s.src = SIGNALING_SERVER + '/socket.io/socket.io.js';
+            s.onload = cb;
+            s.onerror = () => console.error('Failed to load socket.io client from', s.src);
+            document.head.appendChild(s);
+        })(init);
 
-        function setStatus(t) { statusEl.textContent = 'Status: ' + t; }
+        function init() {
+            const statusEl = document.getElementById('status');
+            const videoElement = document.getElementById('remoteVideo');
+            const socket = io(SIGNALING_SERVER);
 
-        socket.on('connect', () => {
-            setStatus('connected');
-            socket.emit('register', 'viewer');
-        });
+            let pc = null;
+            let remoteStream = null;
 
-        socket.on('no-streamer', () => {
-            setStatus('No streamer currently available');
-        });
+            function setStatus(t) { statusEl.textContent = 'Status: ' + t; }
 
-        socket.on('offer', async ({ from, sdp }) => {
-            setStatus('Received offer, creating answer');
-            try {
-                pc = new RTCPeerConnection();
+            socket.on('connect', () => {
+                setStatus('connected to signaling server (' + SIGNALING_SERVER + ')');
+                socket.emit('register', 'viewer');
+            });
 
-                remoteStream = new MediaStream();
-                videoElement.srcObject = remoteStream;
+            socket.on('no-streamer', () => {
+                setStatus('No streamer currently available');
+            });
 
-                pc.ontrack = (event) => {
-                    event.streams[0].getTracks().forEach(track => remoteStream.addTrack(track));
-                };
+            socket.on('offer', async ({ from, sdp }) => {
+                setStatus('Received offer, creating answer');
+                try {
+                    pc = new RTCPeerConnection();
 
-                pc.onicecandidate = (event) => {
-                    if (event.candidate) {
-                        socket.emit('ice-candidate', { to: from, candidate: event.candidate });
-                    }
-                };
+                    remoteStream = new MediaStream();
+                    videoElement.srcObject = remoteStream;
 
-                await pc.setRemoteDescription(new RTCSessionDescription(sdp));
-                const answer = await pc.createAnswer();
-                await pc.setLocalDescription(answer);
+                    pc.ontrack = (event) => {
+                        event.streams[0].getTracks().forEach(track => remoteStream.addTrack(track));
+                    };
 
-                // send answer back to streamer
-                socket.emit('answer', { to: from, sdp: pc.localDescription });
-                setStatus('Answer sent');
-            } catch (err) {
-                console.error('Error handling offer:', err);
-                setStatus('Error handling offer');
-            }
-        });
+                    pc.onicecandidate = (event) => {
+                        if (event.candidate) {
+                            socket.emit('ice-candidate', { to: from, candidate: event.candidate });
+                        }
+                    };
 
-        socket.on('ice-candidate', async ({ from, candidate }) => {
-            try {
-                if (pc) await pc.addIceCandidate(new RTCIceCandidate(candidate));
-            } catch (err) {
-                console.error('Error adding ICE candidate:', err);
-            }
-        });
+                    await pc.setRemoteDescription(new RTCSessionDescription(sdp));
+                    const answer = await pc.createAnswer();
+                    await pc.setLocalDescription(answer);
 
-        socket.on('streamer-stopped', () => {
-            setStatus('Streamer stopped');
-            if (pc) {
-                pc.close();
-                pc = null;
-            }
-            videoElement.srcObject = null;
-        });
+                    // send answer back to streamer
+                    socket.emit('answer', { to: from, sdp: pc.localDescription });
+                    setStatus('Answer sent');
+                } catch (err) {
+                    console.error('Error handling offer:', err);
+                    setStatus('Error handling offer');
+                }
+            });
+
+            socket.on('ice-candidate', async ({ from, candidate }) => {
+                try {
+                    if (pc) await pc.addIceCandidate(new RTCIceCandidate(candidate));
+                } catch (err) {
+                    console.error('Error adding ICE candidate:', err);
+                }
+            });
+
+            socket.on('streamer-stopped', () => {
+                setStatus('Streamer stopped');
+                if (pc) {
+                    pc.close();
+                    pc = null;
+                }
+                videoElement.srcObject = null;
+            });
+        }
     </script>
 </body>
 </html>
